extracted_vulnerabilities/pair_195801_233867/fixed_report.txt
extracted_vulnerabilities/pair_195801_233867/wddx_fixed.c:103:7: error: syntax error [syntaxError]
      if Z_REFCOUNTED(ent1->data) Z_DELREF(ent1->data);
      ^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

